force-app/main/default/objects/Asset/fields/Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number__c</fullName>
    <label>Chassis Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>