force-app/main/default/objects/Asset/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Auto Loan</fullName>
                <isActive>false</isActive>
                <label>Auto Loan</label>
            </value>
            <value>
                <fullName>Automobile</fullName>
                <isActive>false</isActive>
                <label>Automobile</label>
            </value>
            <value>
                <fullName>Cash</fullName>
                <isActive>false</isActive>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Collection</fullName>
                <isActive>false</isActive>
                <label>Collection</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <isActive>false</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Jewelry</fullName>
                <isActive>false</isActive>
                <label>Jewelry</label>
            </value>
            <value>
                <fullName>Mortgage</fullName>
                <isActive>false</isActive>
                <label>Mortgage</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
                <isActive>false</isActive>
                <label>Personal Loan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>